--- a/src/components/Home/Project/Project.css
+++ b/src/components/Home/Project/Project.css
@@ -1,32 +1,43 @@
-
-
-.box   {
-    cursor: pointer;
-    position: relative;
-    /* height: 180px;
-    width: 180px; */
-    text-align: center;
-}
-.box img  {
-    width:100% ;
-    height: 100%;
-    border: 4px #fff solid;
-    border-radius: 2px;
-}
 .links{
+    opacity: 0;
+
+}
+
+.img{
+    height: 230px;
+    width: 330px;
+    border-radius: 10px;
+}
+.project-items {
+    
+    transition: all 1s ease-in-out .2s;
+}
+
+.project-items.py-5.mx-4:hover .links {
+    background-color: rgba(0,0,0,.7);
+    opacity: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  
+    width: 340px;
     position: absolute;
     top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: rgba(0,0,0,.7);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: opacity 0.2s ease-in;
-    opacity: 0;
-}
-.box:hover .links{
-    opacity: 1;
     border-radius: 10px;
+}
+
+.tec-list{
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    
+    
+}
+
+.tec-list li {
+    margin: 5px;
+    padding: 4px;
+    border-radius: 5px;
+    background-color: rgba(0,0,0,.7);
 }
