--- a/src/components/Home/Project/Project.css
+++ b/src/components/Home/Project/Project.css
@@ -41,3 +41,52 @@
     border-radius: 5px;
     background-color: rgba(0,0,0,.7);
 }
+
+@media(min-width : 1440px){
+    .project-items.py-5.mx-4:hover .links {
+        background-color: rgba(0,0,0,.7);
+        opacity: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      
+        width: 365px;
+        position: absolute;
+        top: 0;
+        border-radius: 10px;
+    }
+}
+
+
+@media(min-width : 1024px){
+    .project-items.py-5.mx-4:hover .links {
+        background-color: rgba(0,0,0,.7);
+        opacity: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      
+        width: 365px;
+        position: absolute;
+        top: 0;
+        border-radius: 10px;
+    }
+}
+
+@media(min-width : 2560px){
+    .project-items.py-5.mx-4:hover .links {
+        background-color: rgba(0,0,0,.7);
+        opacity: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100%;
+      
+        width: 780px;
+        position: absolute;
+        top: 0;
+        border-radius: 10px;
+    }
+}
